--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10"
   }
 }
