--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yorkhan.github.io/React-Todo-List/",
+  "homepage": "https://yorkhan.github.io/React-Todo-List/build",
   "name": "webpack-demo",
   "version": "0.1.0",
   "private": true,
