--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,26 @@ node_modules/
 /coverage
 
 # production
-/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
 
 # misc
 .DS_Store
